# apple-health-extractor

./: .gitignore  LICENSE  Makefile  README.md  example_script.py  health_data.csv  pyproject.toml
.github/workflows/: python-app.yml
extractor/: __init__.py  cli.py  extractor.py  record.py
extractor/constants/: metadata.py
tests/: test_extractor.py
tests/resources/: health_data.xml
